Car, wheel, Collision checker class

--- a/Racing Simulation/Racing Simulation.vcxproj
+++ b/Racing Simulation/Racing Simulation.vcxproj
@@ -131,13 +131,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
+    <ClInclude Include="Car.h" />
+    <ClInclude Include="CollisionChecker.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="shader_m.h" />
+    <ClInclude Include="Wheel.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Car.cpp" />
+    <ClCompile Include="CollisionChecker.cpp" />
     <ClCompile Include="Racing Simulation.cpp" />
+    <ClCompile Include="Wheel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\model\model_loading.fs" />
